Remove the Xtend template machinery and compile rune-lang for Java 21 (#1404)
* Compile rune-lang and rune-maven-plugin for Java 21

Both were held at release 17 so that downstream model builds could run the
Maven plugin on JDK 17. They now use the Java 21 release set in the parent
pom, like every other module except rune-runtime.

* Drop the Xtend library dependency from rune-runtime

rune-runtime never used org.eclipse.xtend.lib, but every model built with
Rune pulled it (and xbase.lib) in through it. rune-lang still gets it
through Xtext.

* Replace Xtend runtime library helpers with plain Java

Leftovers from the Xtend conversions still called xbase.lib's
IterableExtensions, Conversions and Exceptions.sneakyThrow. Use Guava,
String.join and List.getLast instead, drop the sneakyThrow wrapper around
code that throws no checked exceptions, and inline the formatter's
Procedure1 spacing constants as the rest of the formatter does.

xbase.lib function types remain only where an Xtext signature requires
them: RequestManager.runRead/runWrite and WorkspaceManager.initialize.

* Use instanceof patterns in validator, cardinality and request manager

Replace instanceof checks followed by a cast with pattern variables. The
cast of Function.getOutput() to RosettaFeature goes too: Attribute
already is one.

* Use List.getFirst/getLast in the formatter's list helpers

* Import types instead of qualifying them inline

RosettaSimpleValidator and RosettaFormatter spelled out package names for types with no simple-name clash in the file.

* Remove the Xtend template machinery from the Java generator

All generators render through the fluent CodeWriter API, so the legacy
appendTo(TargetStringConcatenation) rendering path is dead code.

- Statements, expressions, GeneratedIdentifier and JavaTypeRepresentation
  implement codegen.api.TargetLanguageRepresentation directly; the legacy
  generator.TargetLanguageRepresentation interface is deleted.
- toString() of statements and expressio